Q_table for solving Frozen_lake and Taxi

--- a/Q_table.ipynb
+++ b/Q_table.ipynb
@@ -16,28 +16,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make('FrozenLake-v0')"
+    "def compute_Q(env):\n",
+    "#Initialize table with all zeros\n",
+    "    Q = np.zeros([env.observation_space.n,env.action_space.n])\n",
+    "    # Set learning parameters\n",
+    "    lr = .8\n",
+    "    y = .95\n",
+    "    num_episodes = 2000\n",
+    "    #create lists to contain total rewards and steps per episode\n",
+    "    #jList = []\n",
+    "    rList = []\n",
+    "    for i in range(num_episodes):\n",
+    "        #Reset environment and get first new observation\n",
+    "        s = env.reset()\n",
+    "        d = False\n",
+    "        j = 0\n",
+    "        #The Q-Table learning algorithm\n",
+    "        while j < 99:\n",
+    "            j+=1\n",
+    "            #Choose an action by greedily (with noise) picking from Q table\n",
+    "            a = np.argmax(Q[s,:] + np.random.randn(1,env.action_space.n)*(1./(i+1)))\n",
+    "            #Get new state and reward from environment\n",
+    "            s1,r,d,_ = env.step(a)\n",
+    "            #Update Q-Table with new knowledge\n",
+    "            Q[s,a] = Q[s,a] + lr*(r + y*np.max(Q[s1,:]) - Q[s,a])\n",
+    "            s = s1\n",
+    "            if d == True:\n",
+    "                break\n",
+    "    return Q"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[41mS\u001b[0mFFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFFG\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "env.render()"
+    "def play_policy(env, Q):\n",
+    "    s = env.reset()\n",
+    "    d = 0\n",
+    "    frames = []\n",
+    "    while not d:\n",
+    "        a = np.argmax(Q[s,:])\n",
+    "        s, r, d, _ = env.step(a)\n",
+    "        frames.append({\n",
+    "            'frame': env.render(mode='ansi'),\n",
+    "            'state': s,\n",
+    "            'action': a,\n",
+    "            'reward': r\n",
+    "            })\n",
+    "    return frames        "
    ]
   },
   {
@@ -46,36 +74,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Initialize table with all zeros\n",
-    "Q = np.zeros([env.observation_space.n,env.action_space.n])\n",
-    "# Set learning parameters\n",
-    "lr = .8\n",
-    "y = .95\n",
-    "num_episodes = 2000\n",
-    "#create lists to contain total rewards and steps per episode\n",
-    "#jList = []\n",
-    "rList = []\n",
-    "for i in range(num_episodes):\n",
-    "    #Reset environment and get first new observation\n",
-    "    s = env.reset()\n",
-    "    rAll = 0\n",
-    "    d = False\n",
-    "    j = 0\n",
-    "    #The Q-Table learning algorithm\n",
-    "    while j < 99:\n",
-    "        j+=1\n",
-    "        #Choose an action by greedily (with noise) picking from Q table\n",
-    "        a = np.argmax(Q[s,:] + np.random.randn(1,env.action_space.n)*(1./(i+1)))\n",
-    "        #Get new state and reward from environment\n",
-    "        s1,r,d,_ = env.step(a)\n",
-    "        #Update Q-Table with new knowledge\n",
-    "        Q[s,a] = Q[s,a] + lr*(r + y*np.max(Q[s1,:]) - Q[s,a])\n",
-    "        rAll += r\n",
-    "        s = s1\n",
-    "        if d == True:\n",
-    "            break\n",
-    "    #jList.append(j)\n",
-    "    rList.append(rAll)"
+    "from IPython.display import clear_output\n",
+    "from time import sleep\n",
+    "\n",
+    "def print_frames(frames, actions):\n",
+    "    for i, frame in enumerate(frames):\n",
+    "        clear_output(wait=True)\n",
+    "        print(frame['frame'].getvalue())\n",
+    "        print(\"Timestep:%s\" % (i + 1))\n",
+    "        print(\"State: %s\" % frame['state'])\n",
+    "        print(\"Action:  %s\" % actions[frame['action']])\n",
+    "        print(\"Reward:  %s\" % frame['reward'])\n",
+    "        sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (Down)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFF\u001b[41mG\u001b[0m\n",
+      "\n",
+      "Timestep:8\n",
+      "State: 15\n",
+      "Action:  ↓\n",
+      "Reward:  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('FrozenLake-v0')\n",
+    "Q = compute_Q(env)\n",
+    "frames = play_policy(env,Q)\n",
+    "actions = {0: '\\u2190', 1: '\\u2193', 2: '\\u2192', 3: '\\u2191'}\n",
+    "print_frames(frames, actions)"
    ]
   },
   {
@@ -87,46 +127,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score over time: 0.5645\n"
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFF\u001b[41mG\u001b[0m\n",
+      "\n",
+      "Timestep:6\n",
+      "State: 15\n",
+      "Action:  →\n",
+      "Reward:  1.0\n"
      ]
     }
    ],
    "source": [
-    "print (\"Score over time: \" +  str(sum(rList)/num_episodes))"
+    "from gym.envs.registration import register\n",
+    "register(\n",
+    "    id='FrozenLakeNotSlippery-v1',\n",
+    "    entry_point='gym.envs.toy_text:FrozenLakeEnv',\n",
+    "    kwargs={'map_name' : '4x4', 'is_slippery': False},\n",
+    "    max_episode_steps=100,\n",
+    "    reward_threshold=0.78, # optimum = .819\n",
+    ")\n",
+    "env = gym.make('FrozenLakeNotSlippery-v1')\n",
+    "Q = compute_Q(env)\n",
+    "frames = play_policy(env, Q)\n",
+    "print_frames(frames, actions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final Q-Table Values\n",
-      "[[1.88363011e-01 4.07568043e-03 4.11064606e-03 1.33829362e-02]\n",
-      " [2.25245544e-04 8.47564644e-04 7.38516893e-04 1.71633279e-01]\n",
-      " [7.26532688e-02 0.00000000e+00 4.96229198e-04 7.04610979e-04]\n",
-      " [0.00000000e+00 2.05963336e-03 0.00000000e+00 0.00000000e+00]\n",
-      " [1.53468375e-01 5.30925739e-03 3.37083528e-03 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [1.45895205e-03 7.82175150e-06 2.91668091e-03 3.58331432e-05]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 4.59728299e-03 1.40186452e-01]\n",
-      " [0.00000000e+00 9.90093607e-02 0.00000000e+00 0.00000000e+00]\n",
-      " [2.29259229e-02 1.45898494e-03 0.00000000e+00 1.12480419e-03]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 6.48075253e-01 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 2.09576924e-01 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Final Q-Table Values\")\n",
-    "print(Q)"
+    "env = gym.make('Blackjack-v0')"
    ]
   },
   {
@@ -153,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
